Update README.md with detailed features and installation instructions; add new images and update icon references in manifest.json; fix random quote selection logic in content-script.js; improve error handling in popup.js.

--- a/manifest.json
+++ b/manifest.json
@@ -15,8 +15,8 @@
     }
   ],
   "icons": {
-    "48": "icon-48.jpg",
-    "96": "icon-96.jpg"
+    "48": "block-it.jpg",
+    "96": "block-it.jpg"
   },
   "background": {
     "service_worker": "background.js"
